# nix-cpp-dev

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: main.cpp
